--- a/Filter&SortEuro12SA.ipynb
+++ b/Filter&SortEuro12SA.ipynb
@@ -6,7 +6,7 @@
       "name": "Filter&SortEuro12SA.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNA59/yBBnM8oOZQV1Xi4tm",
+      "authorship_tag": "ABX9TyP4ot18ZxWyMyvDuqX2TyoE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "QXgt-fy0ouye"
       },
@@ -53,7 +53,7 @@
         "id": "Pd595ND9o8Bq",
         "outputId": "ce567a07-62f3-4f69-ff15-3a532b81658d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -854,7 +854,7 @@
         "id": "Fal16rCYpHNd",
         "outputId": "7bfe4b9d-1d06-44ae-bdfb-608d34b119fd"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -896,16 +896,16 @@
     {
       "cell_type": "code",
       "source": [
-        "euro12.shape[0]"
+        "euro12.Team.count()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "EKm34BQ_phRH",
-        "outputId": "0420d0d7-f544-41ab-8703-a5636ebfc1ae"
+        "outputId": "1aa38e0a-f46c-41b0-ac0b-c5144642d9fb"
       },
-      "execution_count": 7,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -915,7 +915,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 25
         }
       ]
     },
@@ -940,7 +940,7 @@
         "id": "69VtEYB-p5mU",
         "outputId": "89424424-b3b0-4e8c-cb2e-04ab291499bd"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1015,7 +1015,7 @@
         "id": "WZZHCuPNqKdq",
         "outputId": "6ba82930-d8f7-4fbd-ceba-3981d4cac024"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1271,7 +1271,7 @@
         "id": "g6biqFt2q10A",
         "outputId": "72c179a5-57ba-4135-cf48-5aa5d410eae4"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1519,7 +1519,7 @@
         "id": "Bpu0ZmIorC3h",
         "outputId": "551e93af-134e-4c6b-b0a4-a99a8c58ca7b"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1555,7 +1555,7 @@
         "id": "KUgheoOYrSEg",
         "outputId": "237d1a08-279b-4e8a-f846-b538cd9dc6c4"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1811,7 +1811,7 @@
         "id": "5oEnBzzYueVN",
         "outputId": "c3d1d691-b80c-4d27-86ea-6b08a36757ca"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2070,7 +2070,7 @@
         "id": "ZQbYFhWFuruJ",
         "outputId": "7bc2e075-d157-4b82-a459-2ad3da9730ea"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2396,7 +2396,7 @@
         "id": "p1jKO67au9Lw",
         "outputId": "4b2e1edc-efb7-40dd-ae36-f07011256844"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3142,14 +3142,14 @@
         "euro12.loc[euro12.Team.isin(['England', 'Italy', 'Russia']), ['Team','Shooting Accuracy']]"
       ],
       "metadata": {
+        "id": "slppSmdsvIyj",
+        "outputId": "134d3104-1ce8-4990-f682-f40f6c62dd7c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        },
-        "id": "slppSmdsvIyj",
-        "outputId": "134d3104-1ce8-4990-f682-f40f6c62dd7c"
+        }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
